# gisdatamonitor

./: .gitignore  PUBLISH_TO_GITHUB.md  README.md
.github/workflows/: pages.yml
app/: README.md
app/backend/: .env.example  README.md  pyproject.toml
app/backend/scripts/: backfill_last30d_history.py  bootstrap_db.py  check_integrity.py  ingest_static_data.py  pull_last24h_once.py  run_sync_once.py  runtime_launcher.py  start_all.ps1  start_all.py
app/backend/sql/: schema.sql  schema_sqlite.sql
app/backend/src/gisdatamonitor_backend/: __init__.py  config.py  db.py  main.py
app/backend/src/gisdatamonitor_backend/routers/: __init__.py  events.py  facilities.py  layers.py  map.py  risk.py  scenes.py  system.py  timeline.py
app/backend/src/gisdatamonitor_backend/services/: __init__.py  analysis.py  repository.py  scheduler.py  sync.py
app/backend/src/gisdatamonitor_backend/services/connectors/: __init__.py  ais_stub.py  base.py  energy.py  firms.py  gdelt.py  usgs.py
app/frontend/: .nojekyll  README.md  autoplay.html  index.html  leaflet.html  monitor.html
app/frontend/assets/: leaflet.js  main.js  monitor.js  runtime-config.js  runtime.js  styles.css
app/shared/: README.md  layer_catalog.json
data/: README.md
data/manifests/: jiangxi_baker_manifest.json  jiangxi_dem_manifest.json  jiangxi_seed_summary.json
deliverables/: README.md
scripts/: build_full_offline_package.py  download_jiangxi_seed_data.py  package_data_full_zip.py  test_zip_runtime.py
